--- a/static/css/style.css
+++ b/static/css/style.css
@@ -98,15 +98,17 @@ img {
 }
 
 .navbar {
-	padding: 1rem 0; 
+	padding: 1rem 0;
+	border-bottom: 1px solid #f1f1f1;
 }
 
 .navbar-light .navbar-nav .nav-link {
     color: #222;
-    font-size: 1.5rem;
+    font-size: 0.9375rem;
     font-weight: 500;
     padding-left: 1rem;
-    padding-right: 1rem; 
+    padding-right: 1rem;
+    text-transform: uppercase;
 }
 
 .navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
@@ -120,12 +122,12 @@ img {
 }
 
 .navbar-brand img {
-	height: 60px;
+	height: 40px;
 }
 
 .container {
 	width: 100%;
-	max-width: 1790px;
+	max-width: 1200px;
 	padding-left: 2rem !important;
 	padding-right: 2rem !important;
 	margin: auto;
@@ -156,7 +158,7 @@ img {
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 1.2rem;
+  font-size: 1.125rem;
   font-weight: 600;
   border-radius: 10px;
 }
@@ -164,11 +166,11 @@ img {
 .btn:hover {
 	background-color: transparent !important;
 	color: #1b53ee !important;
-	padding: 1rem 5rem;
+	padding: 1rem 3rem;
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
-	font-size: 1.2rem;
+	font-size: 1.125rem;
 	font-weight: 600;
 	border-radius: 10px;
 	transition: 0.5s;
@@ -224,7 +226,7 @@ img {
 }
 
 .header-title {
-  	font-size: 6.25rem;
+  	font-size: 2.4375rem;
   	font-weight: 700;
   	line-height: 1;
   	color: #2CCF96;
@@ -233,7 +235,7 @@ img {
 .header-subtitle {
 	margin: 2.25rem 0;
 	font-weight: 400;
-	font-size: 1.5rem;
+	font-size: 1.2rem;
 	color: #222222;
 }
 
@@ -410,7 +412,7 @@ footer .container {
 		display: inherit;
 	}
 	.navbar-brand img {
-		height: 55px;
+		height: 40px;
 	}
 	.no-mobile {
 		display: none;
@@ -445,7 +447,7 @@ footer .container {
 		margin-top: 0;
 	}
 	.navbar-light .navbar-nav .nav-link {
-		font-size: 1.325rem; 
+		font-size: 1.225rem; 
 	}
 	.projects .row {
 		max-width: 600px;
@@ -462,7 +464,7 @@ footer .container {
 		display: inherit;
 	}
 	.navbar-brand img {
-		height: 55px;
+		height: 40px;
 	}
 	.no-mobile {
 		display: none;
@@ -500,7 +502,7 @@ footer .container {
 		margin-top: 0;
 	}
 	.navbar-light .navbar-nav .nav-link {
-		font-size: 1.325rem; 
+		font-size: 1.225rem; 
 	}
 	.projects .row {
 		max-width: 600px;
@@ -517,7 +519,7 @@ footer .container {
 		display: inherit;
 	}
 	.navbar-brand img {
-		height: 55px;
+		height: 40px;
 	}
 	.no-mobile {
 		display: none;
@@ -552,7 +554,7 @@ footer .container {
 		margin-top: 0;
 	}
 	.navbar-light .navbar-nav .nav-link {
-		font-size: 1.325rem; 
+		font-size: 1.225rem; 
 	}
 	.projects .row {
 		max-width: 600px;
@@ -582,7 +584,7 @@ footer .container {
 		font-size: 7rem;
 	}
 	.header-subtitle {
-		font-size: 2rem;
+		font-size: 1.2rem;
 	}
 	.content-title {
 		font-size: 4rem !important;
@@ -708,7 +710,7 @@ footer .container {
 	  font-size: 15px;
 	}
 	.navbar-light .navbar-nav .nav-link {
-		font-size: 1.2rem; 
+		font-size: 0.9375rem;
 	}
   }
   
@@ -718,6 +720,6 @@ footer .container {
 	  font: 16px;
 	}
 	.navbar-light .navbar-nav .nav-link {
-		font-size: 1.2rem; 
+		font-size: 0.9375rem;
 	}
   }
