--- a/static/css/style.css
+++ b/static/css/style.css
@@ -117,6 +117,10 @@ img {
     transition: 0.5s;
 }
 
+.navbar-light .navbar-toggler {
+	border: none !important;
+}
+
 .navbar-nav .nav-item {
 	text-align: center;
 }
@@ -127,7 +131,7 @@ img {
 
 .container {
 	width: 100%;
-	max-width: 1200px;
+	max-width: 1140px;
 	padding-left: 2rem !important;
 	padding-right: 2rem !important;
 	margin: auto;
@@ -243,7 +247,7 @@ img {
 	color: #222;
 	font-size: 2.475rem;
 	font-weight: bold;
-	margin-bottom: 2rem;
+	margin-bottom: 1rem;
 	text-align: left;
 }
 
@@ -251,7 +255,7 @@ img {
 	color: #222;
 	font-size: 1.625rem;;
 	font-weight: 600;
-	margin-bottom: 2rem;
+	margin-bottom: 1rem;
 	text-align: left;
 }
 
@@ -396,7 +400,8 @@ footer .fab {
 }
 
 footer .fab:hover {
-	background-color: #aaa;
+	opacity: 0.7;
+	transition: 0.3s ease;
 }
 
 footer .container {
@@ -425,7 +430,7 @@ footer .container {
 		margin-bottom: 10rem;
 	}
 	.header-title {
-		font-size: 4rem;
+		font-size: 2.4375rem;
 	}
 	.content-title {
 		font-size: 1.625rem !important;
@@ -477,7 +482,7 @@ footer .container {
 		margin-bottom: 10rem;
 	}
 	.header-title {
-		font-size: 4rem;
+		font-size: 2.4375rem;
 	}
 	.content-title {
 		font-size: 1.625rem !important;
@@ -532,7 +537,7 @@ footer .container {
 		margin-bottom: 10rem;
 	}
 	.header-title {
-		font-size: 4rem;
+		font-size: 2.4375rem;
 	}
 	.content-title {
 		font-size: 1.625rem !important;
@@ -581,7 +586,7 @@ footer .container {
 		margin-bottom: 10rem;
 	}
 	.header-title {
-		font-size: 7rem;
+		font-size: 2.4375rem;
 	}
 	.header-subtitle {
 		font-size: 1.2rem;
@@ -627,7 +632,7 @@ footer .container {
 	  font-size: 12px;
 	}
 	.header-title {
-		font-size: 5rem;
+		font-size: 2.4375rem;
 	}
 	.content-title {
 		font-size: 2.275rem !important;
@@ -653,7 +658,7 @@ footer .container {
 	  font-size: 12px;
 	}
 	.header-title {
-		font-size: 5.625rem;
+		font-size: 2.4375rem;
 	}
 	.content-title {
 		font-size: 2.275rem;
@@ -682,7 +687,7 @@ footer .container {
 		font-size: 14px;
 	}
 	.header-title {
-		font-size: 5.625rem;
+		font-size: 2.4375rem;
 	}
 	.content-title {
 		font-size: 2.275rem;
