--- a/static/css/style.css
+++ b/static/css/style.css
@@ -72,6 +72,16 @@ section {
 	width: 100%;
 }
 
+.banner {
+	height: 100vh;
+	width: 100vw;
+	z-index: 5000000000;
+	position: absolute;
+	left: 0;
+	top: 0;
+	background-color: #fff;
+}
+
 footer {
 	background-color: #555 !important;
 	padding: 5rem 0;
