--- a/static/css/style.css
+++ b/static/css/style.css
@@ -83,8 +83,9 @@ section {
 }
 
 footer {
-	background-color: #555 !important;
+	background-color: #efefef !important;
 	padding: 3rem 0;
+	color: #222 !important;
 }
 
 img {
@@ -410,11 +411,11 @@ img {
 }
 
 .footer p {
-  color: #fff;
+  color: #222;
 }
 
 .footer a {
-  color: #fff;
+  color: #222;
 }
 
 .footer a:hover {
@@ -435,7 +436,7 @@ img {
 }
 
 footer .fab {
-    color: #fff;
+    color: #222;
   	display: inline-block;
 	padding: 12px 6px;
 	height: 56px;
