--- a/static/css/style.css
+++ b/static/css/style.css
@@ -404,6 +404,27 @@ img {
 	transition: 0.5s;
 }
 
+#preLoader {
+    display: flex;
+    height: 100vh;
+    position: fixed;
+    width: 100vw;
+    background-color: #fff;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    overflow: hidden;
+	z-index: 100000;
+	padding-top: 20vh;
+	transition: 0.5s ease;
+}
+
+.height-0 {
+	height: 0 !important;
+	padding: 0 !important;
+}
+
 .manifesto {
 	min-height: 90vh;
 	max-width: 850px;
