--- a/static/css/style.css
+++ b/static/css/style.css
@@ -397,8 +397,12 @@ img {
     right: 0px;
     overflow: hidden;
 	z-index: 100000;
-	padding-top: 20vh;
 	transition: 0.5s ease;
+}
+
+.preloader-img {
+	margin-top: 20vh;
+	max-height: 400px;
 }
 
 .height-0 {
